--- a/oakland/implementation.tex
+++ b/oakland/implementation.tex
@@ -19,33 +19,36 @@ and the exit proxy; we simulate additional clients on this path by increasing $\
 \label{fig:impl}
 \end{figure}
 
-\paragraph{CDN.} As the design for \system{} requires encrypted content and identifiers
-
+\paragraph{CDN} As the design for \system{} requires encrypted content and identifiers
 to be stored in the CDN, we cannot request content from real-world CDNs.  Additionally, 
 we must evaluate the performance of \system{} in comparison to the same content, cache locations, etc., so 
-we set up a data storage server.  This is run on a Virtual Private Server (VPS) located in 
+we set up a data storage server.  This server is run on a Virtual Private Server
+(VPS) located in
 Chicago, USA.  To access content, we set up a web server on this VPS machine.  To generate 
 plaintext web content, we used Surge~\cite{barford1998generating}, which allows us 
 to generate a set of files that are representative of real-world web server file distributions.  
 In \system{}, the files are encrypted with a shared key $k$ and the obfuscated file name is the 
-HMAC$_{k}$(file name).  We use AES with 256 bit keys for the shared key and SHA-256 for the 
+HMAC$_{k}$(file name).  We use AES with 256-bit keys for the shared key and SHA-256
+for the 
 hash function.  Both the plaintext files and encrypted files are stored on this web server, and 
 for the purposes of evaluating our prototype, act as a CDN in \system{}.
 
-\paragraph{Exit Proxy.} The exit proxy is the component that queries the CDN for
+\paragraph{Exit Proxy} The exit proxy is the component that queries the CDN for
 encrypted
-content on behalf of a client.  We have implemented a web proxy in Go and it runs on 
+content on behalf of a client.  We have implemented a web proxy in Go; this proxy
+runs on
 a different VPS machine in Chicago, USA.  In addition to proxying web requests, the exit 
 proxy also provides cryptographic functionality.  When receiving a request, it rewrites
 the URL in the request to be the HMAC$_{k}$(URL), and it parses the headers to retrieve a 
-specific header, X-OCDN, which contains the client's session key encrypted under the exit 
+specific header, {\tt X-OCDN}, which contains the client's session key encrypted
+under the exit
 proxy's public key.  Our implementation uses 2048-bit RSA for asymmetric encryption.  After 
 decrypting the session key, it stores it in memory for use on the response.  When 
 it receives a response from the CDN, it decrypts the content with the shared key $k$, and 
 subsequently encrypts it with the session key (both using AES 256-bit encryption).  The 
 exit then forwards the response onto the client proxy.
 
-\paragraph{Client Proxy.} The client proxy acts on behalf of the client who is
+\paragraph{Client Proxy} The client proxy acts on behalf of the client that is
 requesting
 content.  This proxy uses the same implementation as the exit proxy, but provides 
 different cryptographic functions on the requests and responses.  When a client makes 
