updated figure and deployment titles

--- a/oakland/performance.tex
+++ b/oakland/performance.tex
@@ -48,7 +48,7 @@ grows more quickly than TTFB as the file size and latency increase.
 
 \begin{figure}[t!]
 \centering
-\includegraphics[width=.5\textwidth]{Latency_withoutzero}
+\includegraphics[width=.5\textwidth]{Latency_withzero}
 \caption{Time to First Byte and time to complete a request with varying the file size and latency; this latency 
 correspondes to $\alpha$ in Figure \ref{fig:impl}.}
 \label{fig:latency}
